After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696379 - ensure backlight is on when the shield gets raised
ensure backlight is on when the shield gets raised
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
3.8.1
Depends on:
Blocks:
 
 
Reported: 2013-03-22 12:07 UTC by Matthias Clasen
Modified: 2013-04-26 15:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: Remove pre-dim brightness hack (4.13 KB, patch)
2013-04-20 14:18 UTC, Bastien Nocera
committed Details | Review

Description Matthias Clasen 2013-03-22 12:07:38 UTC
How to reproduce:

1. Hit C-A-L.
2. The shield comes down, then the screen turns off.
3. Hit Space.
4. Screen turns own, shield lifts, but the backlight stays off
5. Now we are on the lock screen, without backlight, any further typing makes the backlight turn on.
Comment 1 Matthias Clasen 2013-03-24 17:30:21 UTC
moving to gsd since it handles backlight
Comment 2 Matthias Clasen 2013-03-24 17:35:25 UTC
If I hit any key lightly and quickly while the screen is off, the backlight does not come on. If I hit it strongly, it does.
Comment 3 Matthias Clasen 2013-03-24 17:36:05 UTC
This is pretty ugly, but probably not blocker material - the next keypress or mouse wiggle brings the backlight on
Comment 4 Colin Walters 2013-03-24 17:52:54 UTC
Isn't this a dup of bug 696169 ?
Comment 5 Matthias Clasen 2013-03-24 20:33:59 UTC
No, bug 696169 is about a black screen with backlight on.
This bug is about a properly drawn login screen, but with no backlight.
Comment 6 Bastien Nocera 2013-03-26 15:15:53 UTC
(In reply to comment #2)
> If I hit any key lightly and quickly while the screen is off, the backlight
> does not come on. If I hit it strongly, it does.

It's as if the XIdleTime wasn't getting reset. Which would make it a dupe of bug 695848.
Comment 7 Cosimo Cecchi 2013-03-27 22:30:54 UTC
I think it was indeed a duplicate of bug 695848, and I am not able to reproduce it now. Matthias, can you still reproduce it?
Comment 8 Matthias Clasen 2013-04-03 03:09:14 UTC
still reproduces here
Comment 9 Bastien Nocera 2013-04-20 14:17:42 UTC
(In reply to comment #8)
> still reproduces here

Is it an Intel video card? I think that the backlight level reporting is wrong when DPMS changes.

Patch for testing below, it fixes that problem on my machine.
Comment 10 Bastien Nocera 2013-04-20 14:18:14 UTC
Created attachment 242001 [details] [review]
power: Remove pre-dim brightness hack

We were trying to work-around the fact that switching to the
VT on some laptops re-enabled the backlight.

The backlight level is however incorrect when DPMS mode off, and
checking the level of the backlight, when DPMS is still on, caused
races.

Linux kernel 3.10 will remove the need for VT switching which will
fix this bug properly:
http://blog.ffwll.ch/2013/04/neat-drmi915-stuff-for-310.html
Comment 11 Bastien Nocera 2013-04-26 15:21:34 UTC
Attachment 242001 [details] pushed as f06c7fc - power: Remove pre-dim brightness hack